--- a/apps/widget/tsconfig.json
+++ b/apps/widget/tsconfig.json
@@ -17,5 +17,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+  "exclude": ["src/embed.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
