--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@restaurant-saas/shared": "*",
+    "@types/dompurify": "^3.0.5",
+    "dompurify": "^3.3.1",
+    "marked": "^17.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
