fix all the issues

--- a/apps/widget/nginx.conf
+++ b/apps/widget/nginx.conf
@@ -4,6 +4,14 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Serve success page for order success routes
+    location ~ ^/order/[^/]+/success$ {
+        try_files /success.html =404;
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS';
+        add_header Access-Control-Allow-Headers 'Content-Type';
+    }
+
     location / {
         try_files $uri $uri/ /index.html;
         add_header Access-Control-Allow-Origin *;
