--- a/apps/widget/package.json
+++ b/apps/widget/package.json
@@ -15,6 +15,7 @@
     "@types/dompurify": "^3.0.5",
     "dompurify": "^3.3.1",
     "marked": "^17.0.1",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
