--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -12,7 +12,14 @@
     "resolveJsonModule": true,
     "moduleResolution": "node",
     "types": ["node"]
+    ,
+    "baseUrl": ".",
+    "paths": {
+      "@shared/*": ["../packages/shared/dist/*"]
+    }
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*"
+  ],
   "exclude": ["node_modules", "dist", "prisma"]
 }
